--- a/css/subpage.css
+++ b/css/subpage.css
@@ -108,6 +108,7 @@
 }
 .container .inner .content .product .product-list:after {
     content:'자세히 보기'; display:block; 
+    border-radius:7px;
     text-align:center;
     position:relative; top:-280px;
     width:240px; height:215px;
@@ -138,26 +139,37 @@
     border-radius:5px;
 }
 /* 모달창 안 */
-.container .inner .content .product-modal {
-    background: rgba(0,0,0,0.5);
-    position:absolute; top:0; left:0; z-index:99;
+.modal-bg {
+    background: rgba(0,0,0,0.6);
+    position:fixed; top:0; left:0; z-index:99998;
     width:100%; height:100%;
     cursor:pointer;
     display:none;
 }
-.container .inner .content .product-modal .product-modal-cont{
-    background:white; padding:10px;
-    position:absolute; top:80px; left:25%;
-    z-index:99;
-    width:50%; height:700px;
-    border-radius:20px;
+.modal-box {
+    position:absolute; top:0; left:0; z-index:99999;
+    width:100%; height:100%;
+    cursor:pointer;
     display:none;
 }
-.container .inner .content .product-modal .product-modal-cont img {
+.modal-box .close{
+    font-size:50px; color:rgb(49, 49, 49);
+    position:absolute;top:200px; left:66%;
+    z-index:9999999;
+    width:60px; height:60px;
+}
+.modal-box .product-modal-cont{
+    background:white; padding:70px;
+    position:absolute; top:200px; left:30%;
+    z-index:99;
+    width:40%; 
+    display:none;
+}
+.modal-box .product-modal-cont img {
     width:auto;
     display:block; margin:0 auto;
 }
-.container .inner .content .product-modal .modal-cont p {
+.modal-box .modal-cont p {
    padding-left:20px;
    padding-right:20px;
 }
@@ -210,6 +222,16 @@
     position:relative;
     margin-top:-40px;
 }
+.container .inner .content .cont-chocopie .mobile{
+    display:none;
+    width:70%;
+    margin:auto;
+    text-align:center;
+    margin-bottom:100px;
+}
+.container .inner .content .cont-chocopie .mobile div{
+    margin:30px auto;
+}
 .container .inner .content .cont-chocopie .chocopie-detail .txt-center { text-align:center; }
 .container .inner .content .cont-chocopie .chocopie-detail p span { 
     color:black; font-weight:normal; 
@@ -261,7 +283,7 @@
 }
 .container .inner .content .cont-chocopie .chocopie-detail .chocopie-img-detail .chocopie-detail-list .img-pointer1 .detail-chocolate {
     padding:0; opacity:1;
-    position:absolute; top:80px; left:310px;
+    position:absolute; top:80px; left:400px;
     outline:0px solid black; 
     width:200px; height: 100px; overflow:hidden; transition:height 0.8s;
 }
@@ -473,22 +495,21 @@
 
 
 /* 그래놀라, 그래놀라 바 이미지 팝업 */
-.gran-modal { 
+/* .gran-modal { 
     display:none; 
     position:absolute; left:0;top:0; z-index:99;
     width:100%; height:100%;
     background:rgba(109, 108, 108, 0.7);
     cursor:pointer;   
-}
-.gran-modal .gran-modal-cont {  
-    background:white; padding:10px;
-    position:absolute; top:80px; left:25%;
+} */
+.modal-box .gran-modal-cont {  
+    background:white; padding:60px;
+    position:absolute; top:200px; left:30%;
     z-index:500;
-    width:50%; height:500px;
-    border-radius:20px;
+    width:40%;
     display:none;
 }
-.gran-modal .gran-modal-cont img {
+.modal-box .gran-modal-cont img {
     display:block; margin:0 auto;
 }
 
@@ -535,11 +556,10 @@
     text-indent:10px;
     height:45px;
 }
-.container .inner .content .cont-customer div input[name="writer"] {
-    width:200px;
-}
+.container .inner .content .cont-customer div input[name="writer"],
+.container .inner .content .cont-customer div input[name="password"],
 .container .inner .content .cont-customer div input[name="email"] {
-    width:300px;
+    width:260px;
 }
 .container .inner .content .cont-customer div input[name="title"]{
     width:700px;
