--- a/css/swiper.css
+++ b/css/swiper.css
@@ -216,7 +216,8 @@
   transform: translate3d(0, 0, 0);
   z-index: 10;
 }
-.swiper-pagination.swiper-pagination-hidden {
+.swiper-pagination.swiper-pagination-hidden
+ {
   opacity: 0;
 }
 /* Common Styles */
